--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,6 @@ jobs:
         env:
           CR_PAT: ${{ secrets.CR_PAT }}
       - name: Build Docker Image
-        run: cd backend && docker build -t ghcr.io/mealie-recipes/mealie-discord-bot:latest .
+        run: docker build -t ghcr.io/mealie-recipes/mealie-discord-bot:latest .
       - name: push to container registry
         run: docker push ghcr.io/mealie-recipes/mealie-discord-bot:latest
