Update default credentials

--- a/app/bot/config.yml
+++ b/app/bot/config.yml
@@ -7,7 +7,7 @@ commands:
 
       Try the default username and password
 
-      Username: changeme@email.com
+      Username: changeme@example.com
       Password: MyPassword
 
       Btw, this is in the docs 👇
