Add container port check

--- a/app/bot/config.yml
+++ b/app/bot/config.yml
@@ -30,6 +30,7 @@ commands:
 
       1. Have you verified your volumes are configured correctly?
       2. Have you reviewed the installation checklist?
+      3. Have you mapped the right container port?
 
       **Links**
       [Docker Compose Example](https://nightly.mealie.io/documentation/getting-started/installation/sqlite/)
