--- a/app/bot/config.yml
+++ b/app/bot/config.yml
@@ -41,11 +41,11 @@ commands:
     content: |
       **Not sure which tag to pull?**
 
-      *Note: Since v1.0.0, Docker images are on both Github and Dockerhub*
+      *Note: Since v1.0.0, Docker images are on both Github and Docker Hub*
 
       **<version>** - Version-specific build of Mealie.
-      **latest** - Latest stable release image of Mealie. *Note: This tag is not yet available, it will be available with the v1 stable release*
-      **nightly** - Nightly build fresh off the mealie-next branch (if you're feeling brave)
+      **latest** - Latest stable release image of Mealie.
+      **nightly** - Nightly build fresh off the mealie-next branch (if you're feeling brave).
 
       *See the [docker compose example](https://nightly.mealie.io/documentation/getting-started/installation/sqlite/) for most current tags for running Mealie*
 
